objects/DaScoopComposer__Scoop_Composer_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All Settings related to Groove Connect (managed package)</description>
    <fields>
        <fullName>DaScoopComposer__Account_Notes_custom_field_name__c</fullName>
        <description>API name of the field on the Account object Groove will use to store notes related to the Account. If valid, this field will be used to populate Groove notes.</description>
        <inlineHelpText>API name of the field on the Account object Groove will use to store notes related to the Account.</inlineHelpText>
        <label>Account Notes Custom Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Add_only_Groove_Users_as_Invitees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Groove syncs events from Google to Salesforce, it will try to find users, contacts and leads and add them as invitees. This option controls whether Groove will either add only Salesforce users that have a Groove license or any users.</description>
        <inlineHelpText>When Groove syncs events from Google to Salesforce, it tries to find users, contacts and leads with the respective email to add them as invitees. This option controls whether Groove will either include only users that have a Groove license or any users.</inlineHelpText>
        <label>Add only Groove Users as Invitees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Additional_Fields_for_Calendar_Events__c</fullName>
        <description>Additional fields requested from user in Calendar interface. Currently supported field types are picklists, boolean and open text fields. Enter API names separated by commas.</description>
        <inlineHelpText>Additional fields requested from user in Calendar interface. Currently supported field types are picklists, boolean and open text fields. Enter API names separated by commas.</inlineHelpText>
        <label>Additional Fields for Calendar Events</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Additional_Fields_for_Email_Logging__c</fullName>
        <description>Defines a list of Task fields (API names) that are to be displayed in the &quot;Log Email&quot; dialog.</description>
        <inlineHelpText>Defines a list of Task fields (API names) that are to be displayed in the &quot;Log Email&quot; dialog so users can add additional information when</inlineHelpText>
        <label>Additional Fields for Email Logging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Allow_Automatic_Calendar_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether users can activate Groove&apos;s calendar sync service. Groove calendar Sync will bidirectionally sync Google calendar events with Salesforce events</inlineHelpText>
        <label>Allow Background Calendar Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Allow_Automatic_Email_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether users can set up Groove&apos;s email sync service. Groove Email Sync will automatically log all customer related emails sent and received by your users.</description>
        <inlineHelpText>Controls whether users can actviate Groove&apos;s email sync service. Groove Email Sync will automatically log all customer related emails sent and received by your users.</inlineHelpText>
        <label>Allow Background Email Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Allow_Inline_Create__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls whether users can create Salesforce records from the sidebar in Groove for Gmail. Otherwise new records will be created in a new Salesforce tab.</inlineHelpText>
        <label>Allow Inline Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Allow_Inline_Editing__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls whether users can update Salesforce records from the siebar in Groove for Gmail</inlineHelpText>
        <label>[DEPRECATED]Allow Inline Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Alternative_Email_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether the field &quot;Email 2&quot; is considered when trying to match emails to a lead or contact, as opposed to the standard email field only. To avoid performance issues, don&apos;t activate this, if you have more than 500,000 leads or contacts.</inlineHelpText>
        <label>Alternative Email Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Always_Mirror_Events_in_Google_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>controls whether or not this event will be mirrored in the corporate calendar of the user who is the owner of an event record.</inlineHelpText>
        <label>Always Mirror Events in Google Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Best_Match_Email_Logging__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls whether you want logged/synced emails to be logged only once (under the best matching lead/contact/opportunity/case) or multiple times (under all matching records). If unchecked, the activity history is more comprehensive but more storage is used</inlineHelpText>
        <label>Best Match Email Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Block_Teammate_Email_Opens__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do not register email opens from teammates with Groove installed. This is a good way to omit internal company co-worker email opens from affecting stats.</description>
        <inlineHelpText>Do not register email opens from teammates with Groove installed. This is a good way to omit internal company co-worker email opens from affecting stats.</inlineHelpText>
        <label>Block Teammate Email Opens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Calendar_Email__c</fullName>
        <inlineHelpText>Is the email of the Groove Email-to-Salesforce service that was set up to handle +Salesforce emails and calendar invitations.</inlineHelpText>
        <label>Custom Groove Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Contact_Notes_custom_field_name__c</fullName>
        <description>API name of the field on the Contact object Groove will use to store notes related to the Contact. If valid, this field will be used to populate Groove notes.</description>
        <inlineHelpText>API name of the field on the Contact object Groove will use to store notes related to the Contact.</inlineHelpText>
        <label>Contact Notes Custom Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Create_Unresolved_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls what happens if an email is logged but no related objects was found (e.g. Lead, Contact, Opportunity, Case, etc). If checked, Groove will create an &quot;orphaned task&quot; and the user can later relate the task manually to a record or delete it.</inlineHelpText>
        <label>Create Unresolved Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain_Blacklist_Applies_to_Tracking__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Emails containing only recipients on the domain blocklist will not be tracked. This can be a good way to prevent internal emails from ever being tracked.</description>
        <inlineHelpText>Emails containing only recipients on the domain blacklisted will not be tracked. This can be a good way to prevent internal emails from ever being tracked.</inlineHelpText>
        <label>Blocklist Applies to Email Open Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain_Blacklist__c</fullName>
        <description>Is a comma separated list of email domains. Groove will not log emails if all participants on the email are on the blocklist. Use this to prevent purely internal emails from being logged.</description>
        <inlineHelpText>Is a comma separated list of email domains. Groove will not log emails if all participants on the email are on the blacklist. Use this to prevent purely internal emails from being logged.</inlineHelpText>
        <label>Domain Blocklist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Dont_Track_RSVP_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether you want Groove to indicate the RSVP status of invitees. This is also useful when you don&apos;t want Groove to do the equivalent of clicking &quot;Add to Invitees&quot; when you select contacts/leads, making it a &quot;Multi-Person Event&quot;</inlineHelpText>
        <label>Don&apos;t Track RSVP Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_to_Saleforce_Association_Policy__c</fullName>
        <inlineHelpText>Auto-associating emails to Leads/Contacts and...
0 = None
11 = My Open Opportunities
12 = My Opportunities
13 = Any Open Opportunities
14 = Any Opportunities
21 = My Open Cases
22 = My Cases
23 = Any Open Cases
24 = Any Cases</inlineHelpText>
        <label>Related-to Lookup Logic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_to_Username_Suffix__c</fullName>
        <inlineHelpText>if your usernames are named like Email + Suffix (e.g. frank@acme.com.production) you can add the suffix here (including the dot). This allows the Groove Auth Provider Handler to map an email address to a username.</inlineHelpText>
        <label>Email to Username Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Advanced_Email_Tracking__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If you have Email Tracking Enabled, this indicates whether or not the IP Address and User Agent String of a recipient opening a tracked email will be saved. Disable this option if tracking such attributes isn&apos;t compliant with your privacy policy.</inlineHelpText>
        <label>Enable Advanced Email Open Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Calendar__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>indicates whether the option &quot;Track this event in Salesforce&quot; is displayed to your users in Google Calendar. This allows you to enable/disable the calendar event tracking feature.</inlineHelpText>
        <label>Enable Calendar Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Contact_Auto_Capture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto Contact Capture</description>
        <inlineHelpText>Enable Auto Contact Capture for users to automatically uncover and create Contacts that do not exist in Salesforce, from Accounts you are already talking to.</inlineHelpText>
        <label>Auto Contact Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Easy_Create_Case__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether users have the option to create cases from the Groove View within Gmail</description>
        <inlineHelpText>Indicates whether users have the option to create cases from the Groove View within Gmail</inlineHelpText>
        <label>Enable Easy Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Easy_Create_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether users have the option to create contacts from the Groove View within Gmail</description>
        <inlineHelpText>Indicates whether users have the option to create contacts from the Groove View within Gmail.</inlineHelpText>
        <label>Enable Easy Create Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Easy_Create_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether users have the option to create leads from the Groove View within Gmail</description>
        <inlineHelpText>Indicates whether users have the option to create leads from the Groove View within Gmail</inlineHelpText>
        <label>Enable Easy Create Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Email_Bonus_Features__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether users can activate the features &quot;Send Later&quot;, &quot;Email Reminders&quot;.</inlineHelpText>
        <label>Enable Email Bonus Features</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Email_Tracking__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>indicates whether the option &quot;Track Email&quot; is displayed to your users in Gmail. This allows you to enable/disable the email tracking feature.</inlineHelpText>
        <label>Enable Email Open Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Groove_History__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Groove History enables users to view their notes, call logs, and logged events for any Salesforce record right from Gmail. Groove History also makes it dead simple to log new activities and calls directly from Gmail.</description>
        <inlineHelpText>Groove History enables users to view their notes, call logs, and logged events for any Salesforce record right from Gmail. Groove History also makes it dead simple to log new activities and calls directly from Gmail.</inlineHelpText>
        <label>Enable Groove History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_LinkedIn_Sales_Navigator__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls whether you want users to see the LinkedIn tab to be in the Groove sidebar. This tab requires users to have a LinkedIn Sales Navigator license to be useful.</inlineHelpText>
        <label>Enable LinkedIn Sales Navigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Enable_Search_Salesforce_from_Gmail__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>indicates whether users are able to search Salesforce contacts or leads from Gmail via Groove while composing emails.</inlineHelpText>
        <label>Enable Search Salesforce from Gmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Exact_Match_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not log emails if the recipients do not contain the email address of a user.</description>
        <inlineHelpText>Check this box if you do not want to log emails that cannot be associated to a Salesforce user by inspecting the email recipients, like emails sent from a group email address. If this box is not checked, Groove will associate the email to the running user</inlineHelpText>
        <label>Exact Match Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Ignored_Attachment_Types__c</fullName>
        <description>A comma-separated list of file extensions to ignore when logging an email, e.g., jpg, png, gif</description>
        <inlineHelpText>A comma-separated list of file extensions to ignore when logging an email, e.g., jpg, png, gif</inlineHelpText>
        <label>Ignored Attachment Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lead_Notes_custom_field_name__c</fullName>
        <description>API name of the field on the Lead object Groove will use to store notes related to the Lead. If valid, this field will be used to populate Groove notes.</description>
        <inlineHelpText>API name of the field on the Lead object Groove will use to store notes related to the Lead.</inlineHelpText>
        <label>Lead Notes Custom Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Make_Performance_Data_Transparent__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>controls what data is visible in the Groove performance dashboards. If checked, users can see the data of other users that are in the same level of the role-hierarchy (probably their teammates). If unchecked only managers can see their reportees data.</inlineHelpText>
        <label>Make Performance Data Transparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Maximum_Attachment_Size__c</fullName>
        <description>Maximum size (in bytes) of email attachments to attach to Activity/Activity&apos;s parent.
Blank (default) = Allow any attachments (5mb max size)
0 = Do not allow any attachments
1000000 = Allow attachments up to 1mb</description>
        <inlineHelpText>Maximum size (in bytes) of email attachments to attach to Activity/Activity&apos;s parent.
Blank (default) = Allow any attachments (5mb max size)
0 = Do not allow any attachments
1000000 = Allow attachments up to 1mb</inlineHelpText>
        <label>Maximum Attachment Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Only_sync_CRM_related_Google_events__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls whether Google events are only synced to Salesforce when at least one invitee is a user, a contact or a lead (= the event is considered CRM related). If this box is unchecked, all events (that are not private) are synced from Google to Salesforce</inlineHelpText>
        <label>Only sync CRM related Google events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Opportunity_Notes_custom_field_name__c</fullName>
        <description>API name of the field on the Opportunity object Groove will use to store notes related to the Opportunity. If valid, this field will be used to populate Groove notes.</description>
        <inlineHelpText>API name of the field on the Opportunity object Groove will use to store notes related to the Opportunity.</inlineHelpText>
        <label>Opportunity Notes Custom Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Reparent_Email_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether you want email attachments to be saved under the &quot;Related to&quot; record or the &quot;Person&quot; record instead of the Email record directly.</inlineHelpText>
        <label>Reparent Email Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Respect_Sharing_Rules_When_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Respect sharing rules when logging emails / calendar events.</description>
        <inlineHelpText>Controls whether Groove logs emails/events to any related records, regardless of sharing rules (unchecked) or logs emails/events only to records to which the user has read access to (checked).</inlineHelpText>
        <label>Respect Sharing Rules when Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Reverse_Number_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, Groove will automatically update the normalized version of Contacts and Leads Phone and Mobile numbers to support Groove Dialer&apos;s reverse number lookup.</description>
        <inlineHelpText>Enable if you want to use Groove Dialer&apos;s reverse number lookup functionality</inlineHelpText>
        <label>Reverse Number Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Search_and_Select_Objects__c</fullName>
        <inlineHelpText>is a comma separated list of all sObjects (use API names of sObjects that &quot;Allow Activities&quot;) that shall be included in a search and select result (e.g. when a user want&apos;s to attach an email or calendar event to a specific record in Salesforce).</inlineHelpText>
        <label>Search and Select Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Skip_Automatic_Permission_Set_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not automatically assign the Groove Permission Set to all active users when they are created or updated.</description>
        <inlineHelpText>(Recommendation: disabled). When enabled, the Groove Assign Permission Set trigger will immediately exit and will not assign the Groove Permission set to newly inserted or updated users.</inlineHelpText>
        <label>Skip Automatic Permission Set Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Tracking_Url__c</fullName>
        <inlineHelpText>*OPTIONAL - URL of the your own email open tracking pixel - typically a Salesforce site you have set up. Only use this option if you do not want Groove to host the email open tracking pixel.</inlineHelpText>
        <label>Custom Email Open Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Use_Groove_Templates_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Groove allows users to manage email templates from Gmail. If this box is checked, this feature is limited to Groove templates. Otherwise users can manage Groove templates and Salesforce templates.</inlineHelpText>
        <label>Use Groove Templates Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Use_Inline_Groove_Views_Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether users have the option to create opportunities from the Groove View within Gmail</description>
        <inlineHelpText>This option is deprecated. Do not enable this option before you talk to support@grooveapp.com .

Indicates whether Groove View data will be show directly inside of an email (if checked) or in a side bar interface (unchecked)</inlineHelpText>
        <label>Enable Easy Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Groove Settings</label>
</CustomObject>